# plagiarism_app_back

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: __init__.py  main.py  routes.py  services.py
src/core/: __init__.py  config.py  middleware.py  openapi.py
src/plagiarism_algorithms/: plagiarism_clusters.py  plagiarism_difflib.py  tokenizer.py
src/routers/: __init__.py  files.py  plagiarism.py
src/services/: file_service.py  plagiarism_clusters.py  plagiarism_difflib.py  plagiarism_service.py
