[project]
name = "plagiarism-app-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all,standard]>=0.115.12",
    "numpy>=2.2.6",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "uvicorn>=0.34.2",
]
